<resources>
    <string name="app_name">Calculator</string>
    <!-- here are all the strings i used for the buttons -->
    <string name="clear">C</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="percent">%</string>
    <string name="negorpos">+/-</string>
    <string name="divide">/</string>
    <string name="multipy">X</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="decimal">.</string>
    <string name="equals">=</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log10">log 10</string>
    <string name="ln">ln</string>
</resources>